--- a/EzOrder(Cus)/View/Order/Order.storyboard
+++ b/EzOrder(Cus)/View/Order/Order.storyboard
@@ -21,13 +21,7 @@
                         <viewLayoutGuide key="safeArea" id="0aT-j2-PsX"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="mostViewed" id="fL8-lZ-OqH"/>
-                    <navigationItem key="navigationItem" title="點餐" id="ZBh-9S-3aZ">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="PWs-IU-HMf">
-                            <connections>
-                                <segue destination="ZRw-kb-hPM" kind="show" id="v6w-GM-YLh"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="點餐" id="ZBh-9S-3aZ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="ZRw-kb-hPM" kind="show" identifier="menuSegue" id="UdI-yt-lXa"/>
@@ -330,32 +324,42 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6G1-zM-Mcm">
-                                                    <rect key="frame" x="15" y="9" width="150" height="100"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6G1-zM-Mcm">
+                                                    <rect key="frame" x="15" y="10" width="150" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="4YP-ag-MIg"/>
+                                                        <constraint firstAttribute="width" constant="150" id="XiS-hl-i7V"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="滷肉飯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VwO-9M-2jW">
-                                                    <rect key="frame" x="173" y="11" width="62" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="滷肉飯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VwO-9M-2jW">
+                                                    <rect key="frame" x="173" y="8" width="62" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNS-4f-BOf">
-                                                    <rect key="frame" x="173" y="43" width="38" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNS-4f-BOf">
+                                                    <rect key="frame" x="173" y="40" width="38" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="數量 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SA3-dy-fQ3">
-                                                    <rect key="frame" x="173" y="75" width="68" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="數量 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SA3-dy-fQ3">
+                                                    <rect key="frame" x="173" y="72" width="68" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="SA3-dy-fQ3" firstAttribute="leading" secondItem="6G1-zM-Mcm" secondAttribute="trailing" constant="8" id="1fa-gJ-VhN"/>
+                                                <constraint firstItem="SA3-dy-fQ3" firstAttribute="top" secondItem="iNS-4f-BOf" secondAttribute="bottom" constant="8" id="9RX-zd-HXb"/>
+                                                <constraint firstItem="iNS-4f-BOf" firstAttribute="top" secondItem="VwO-9M-2jW" secondAttribute="bottom" constant="8" id="J7a-gy-n76"/>
+                                                <constraint firstItem="6G1-zM-Mcm" firstAttribute="top" secondItem="Rxh-Sk-nZP" secondAttribute="top" constant="10" id="JOX-0L-uhb"/>
+                                                <constraint firstItem="iNS-4f-BOf" firstAttribute="leading" secondItem="6G1-zM-Mcm" secondAttribute="trailing" constant="8" id="aZm-SV-YEC"/>
+                                                <constraint firstItem="6G1-zM-Mcm" firstAttribute="leading" secondItem="Rxh-Sk-nZP" secondAttribute="leading" constant="15" id="ggN-wt-vhj"/>
+                                                <constraint firstItem="VwO-9M-2jW" firstAttribute="top" secondItem="Rxh-Sk-nZP" secondAttribute="top" constant="8" id="gki-fd-PqI"/>
+                                                <constraint firstItem="VwO-9M-2jW" firstAttribute="leading" secondItem="6G1-zM-Mcm" secondAttribute="trailing" constant="8" id="yfs-HL-u1c"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="amountLabel" destination="SA3-dy-fQ3" id="UDC-tJ-XDO"/>
@@ -722,7 +726,4 @@
     <resources>
         <image name="Cash" width="267" height="267"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="UdI-yt-lXa"/>
-    </inferredMetricsTieBreakers>
 </document>
