--- a/EzOrder(Cus)/View/Progress/Progress.storyboard
+++ b/EzOrder(Cus)/View/Progress/Progress.storyboard
@@ -22,15 +22,71 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="progressCell" rowHeight="80" id="34J-5Y-jkJ">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="progressCell" rowHeight="120" id="34J-5Y-jkJ" customClass="ProgressTableViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="34J-5Y-jkJ" id="OXp-BV-V1b">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z3M-sM-VuY">
+                                                    <rect key="frame" x="15" y="10" width="150" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="2SK-HI-7uN"/>
+                                                        <constraint firstAttribute="width" constant="150" id="U2W-WX-76m"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="滷肉飯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlu-Xm-qin">
+                                                    <rect key="frame" x="173" y="8" width="62" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55C-CH-uKP">
+                                                    <rect key="frame" x="173" y="40" width="38" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="數量 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kh-fk-Gn9">
+                                                    <rect key="frame" x="173" y="72" width="68" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="狀態" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NEr-uK-Tvr">
+                                                    <rect key="frame" x="329" y="86.5" width="31" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="55C-CH-uKP" firstAttribute="top" secondItem="qlu-Xm-qin" secondAttribute="bottom" constant="8" id="0Zw-N2-RPw"/>
+                                                <constraint firstItem="1kh-fk-Gn9" firstAttribute="top" secondItem="55C-CH-uKP" secondAttribute="bottom" constant="8" id="7JM-jN-g64"/>
+                                                <constraint firstAttribute="trailing" secondItem="NEr-uK-Tvr" secondAttribute="trailing" constant="15" id="7e2-jk-y7C"/>
+                                                <constraint firstItem="55C-CH-uKP" firstAttribute="leading" secondItem="z3M-sM-VuY" secondAttribute="trailing" constant="8" id="Bnh-dm-TEf"/>
+                                                <constraint firstItem="z3M-sM-VuY" firstAttribute="leading" secondItem="OXp-BV-V1b" secondAttribute="leading" constant="15" id="H8J-UQ-aHn"/>
+                                                <constraint firstItem="z3M-sM-VuY" firstAttribute="top" secondItem="OXp-BV-V1b" secondAttribute="top" constant="10" id="Sf2-7F-GM2"/>
+                                                <constraint firstItem="1kh-fk-Gn9" firstAttribute="leading" secondItem="z3M-sM-VuY" secondAttribute="trailing" constant="8" id="Upi-Hj-Any"/>
+                                                <constraint firstItem="qlu-Xm-qin" firstAttribute="leading" secondItem="z3M-sM-VuY" secondAttribute="trailing" constant="8" id="gNe-j6-sZo"/>
+                                                <constraint firstAttribute="bottom" secondItem="NEr-uK-Tvr" secondAttribute="bottom" constant="15" id="r9j-rZ-kG2"/>
+                                                <constraint firstItem="qlu-Xm-qin" firstAttribute="top" secondItem="OXp-BV-V1b" secondAttribute="top" constant="8" id="tz0-rZ-TNc"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="foodAmountLabel" destination="1kh-fk-Gn9" id="NDc-Fq-sLr"/>
+                                            <outlet property="foodImageView" destination="z3M-sM-VuY" id="bTk-LC-e1A"/>
+                                            <outlet property="foodNameLabel" destination="qlu-Xm-qin" id="ZiB-Zq-M8J"/>
+                                            <outlet property="foodPriceLabel" destination="55C-CH-uKP" id="ONc-MA-Zv7"/>
+                                            <outlet property="statusLabel" destination="NEr-uK-Tvr" id="7f5-aj-c6W"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="JPS-Iq-ow9" id="hrF-qa-E9R"/>
+                                    <outlet property="delegate" destination="JPS-Iq-ow9" id="8tB-CL-uLJ"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ML-2N-7PM">
                                 <rect key="frame" x="0.0" y="578" width="375" height="40"/>
@@ -81,11 +137,19 @@
                         <viewLayoutGuide key="safeArea" id="w0r-Rf-EBp"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="recents" id="9ig-KV-EOi"/>
-                    <navigationItem key="navigationItem" title="用餐進度" id="rHP-nt-jgb"/>
+                    <navigationItem key="navigationItem" title="用餐進度" id="rHP-nt-jgb">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="服務鈴" id="gf1-oh-9L8">
+                            <connections>
+                                <action selector="seviceBellButton:" destination="JPS-Iq-ow9" id="psb-Ec-Kg2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="payButton" destination="1Ev-h4-VZm" id="3l1-iT-7Ri"/>
-                        <outlet property="totalMoneyLabel" destination="czX-OF-XVb" id="RGv-qb-QrP"/>
+                        <outlet property="progressTableView" destination="9Fr-t9-2G6" id="Jgm-4b-yY5"/>
+                        <outlet property="seviceBellButton" destination="gf1-oh-9L8" id="gIA-J4-6SQ"/>
+                        <outlet property="totalPriceLabel" destination="czX-OF-XVb" id="RGv-qb-QrP"/>
                         <segue destination="zA5-uB-Til" kind="presentation" identifier="creditCardPaySegue" id="Odv-no-s0x"/>
                     </connections>
                 </viewController>
@@ -249,4 +313,7 @@
             <point key="canvasLocation" x="1693.5999999999999" y="859.52023988005999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="服務鈴" width="13.333333015441895" height="13.333333015441895"/>
+    </resources>
 </document>
